# kaze

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.cargo/: config.toml
clap_merge/: Cargo.toml
clap_merge/clap_merge_derive/: Cargo.toml
clap_merge/clap_merge_derive/src/: lib.rs
clap_merge/src/: lib.rs
cli/: Cargo.toml
cli/src/: clap_app.rs  main.rs
core/: .clang-format  Cargo.toml  build.rs  kaze.h
core/lib/: mesh.h
core/src/: bytes.rs  clap_args.rs  ffi.rs  lib.rs  main.rs  ringbuf.rs  shm.rs  shm_unix.rs  tokio_shm.rs
core2/src/: ringbuf.rs
crates/clap-merge/: Cargo.toml
crates/clap-merge-derive/: Cargo.toml
crates/clap-merge-derive/src/: lib.rs
crates/clap-merge/src/: lib.rs
crates/clap_merge/: Cargo.toml
crates/clap_merge/clap_merge_derive/: Cargo.toml
crates/core/: Cargo.toml
crates/core/src/: bytes.rs  lib.rs
crates/corral/: Cargo.toml
crates/corral/src/: builder.rs  connection.rs  corral.rs  dispatcher.rs  lib.rs  options.rs  ratelimit.rs  rpc_hub.rs
crates/documented_toml/: Cargo.toml
crates/documented_toml/src/: lib.rs
crates/documented_toml/tests/: integration_test.rs
crates/documented_toml_derive/: Cargo.toml
crates/documented_toml_derive/src/: lib.rs
crates/edge/: Cargo.toml
crates/edge/src/: lib.rs
crates/kaze-config/: Cargo.toml  test.rs
crates/kaze-config/src/: lib.rs
crates/kaze-core/: .clang-format  Cargo.toml  build.rs  kaze.c  kaze.h  kz_threads.h
crates/kaze-core/src/: bytes.rs  ffi.rs  lib.rs  split.rs
crates/kaze-corral/: Cargo.toml
crates/kaze-corral/src/: corral.rs  layer.rs  lib.rs  options.rs
crates/kaze-edge/: Cargo.toml  sink_expand.rs
crates/kaze-edge/src/: edge.rs  lib.rs  options.rs
crates/kaze-host/: Cargo.toml
crates/kaze-plugin/: Cargo.toml
crates/kaze-plugin/src/: clap_default.rs  context.rs  executor.rs  graceful_exit.rs  lib.rs  local.rs  typeid_map.rs  wrapper.rs
crates/kaze-plugin/src/config_map/: mod.rs
crates/kaze-protocol/: Cargo.toml  build.rs  proto_expand.rs
crates/kaze-protocol/proto/: kaze.proto
crates/kaze-protocol/src/: codec.rs  lib.rs  message.rs  packet.rs  proto.rs  service.rs  sink.rs
crates/kaze-protocol/src/proto/: kaze.rs
crates/kaze-resolver/: Cargo.toml
crates/kaze-resolver-consul/: Cargo.toml
crates/kaze-resolver-consul/src/: lib.rs  options.rs
crates/kaze-resolver/src/: cached.rs  chain.rs  lib.rs  local.rs  options.rs  plugin.rs  resolver.rs  service.rs  wrapper.rs
crates/kaze-service/: Cargo.toml
crates/kaze-service/src/: adaptor.rs  combiner.rs  lib.rs  map.rs  reusable_box.rs  service_fn.rs  util.rs
crates/kaze-sidecar/: Cargo.toml
crates/kaze-sidecar-plugin/: Cargo.toml
crates/kaze-sidecar/logs/: kaze_shm_0.0.0.1
crates/kaze-sidecar/src/: builder.rs  config.rs  host.rs  lib.rs  main.rs  options.rs  sidecar.rs
crates/kaze-sidecar/src/config/: filefinder.rs  map.rs  merge.rs  mod.rs
crates/kaze-sidecar/src/config_map/: merge.rs  mod.rs
crates/kaze-sidecar/src/pipeline/: builder.rs  corral_layer.rs  mod.rs
crates/kaze-sidecar/src/plugins/: mod.rs
crates/kaze-sidecar/src/plugins/consul/: options.rs
crates/kaze-sidecar/src/plugins/corral/: corral.rs  layer.rs  mod.rs  options.rs  service.rs
crates/kaze-sidecar/src/plugins/log/: mod.rs  options.rs
crates/kaze-sidecar/src/plugins/prometheus/: mod.rs  options.rs
crates/kaze-sidecar/src/plugins/ratelimit/: mod.rs  options.rs
crates/kaze-sidecar/src/plugins/tracker/: mod.rs  options.rs
crates/kaze-util/: Cargo.toml
crates/kaze-util/src/: duration.rs  lib.rs  parser.rs  ratelimit.rs  rpctracker.rs  singleflight.rs  sink_service.rs  wrapper.rs
crates/kaze-util/src/tower_ext/: adaptor.rs  case.rs  cell.rs  chain.rs  chain_layer.rs  chain_service.rs  filter.rs  mod.rs  option_service.rs  ready_call.rs  service_cell.rs  sink.rs  sink_service.rs
crates/protocol/: Cargo.toml
crates/protocol/proto/: kaze.proto
crates/protocol/src/: codec.rs  lib.rs  packet.rs  proto.rs
crates/protocol/src/proto/: kaze.rs
crates/resolver/: Cargo.toml
crates/resolver/src/: cached.rs  chain.rs  lib.rs  local.rs  options.rs  resolver.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs
hosts/lua/: .clang-format  kaze.h
sidecar/: Cargo.toml  build.rs  sidecar.toml
sidecar/proto/: kaze.proto
sidecar/src/: args.rs  clap_args.rs  cli.rs  codec.rs  config.rs  connection.rs  corral.rs  dispatcher.rs  edge.rs  main.rs  ratelimit.rs  register.rs  resolver.rs  socket_pool.rs
sidecar/src/commands/: daemon.rs  mod.rs  send.rs
sidecar/src/proto/: kaze.rs
utils/: Cargo.toml
utils/src/cli/: main.rs
utils/src/echo/: main.rs
