[workspace]
resolver = "2"
members = [
    "crates/clap-merge",
    "crates/clap-merge-derive",
    "crates/kaze-core",
    "crates/kaze-corral",
    "crates/kaze-edge",
    "crates/kaze-host",
    "crates/kaze-protocol",
    "crates/kaze-resolver",
    "crates/kaze-resolver-consul",
    "crates/kaze-sidecar",
    "crates/kaze-sidecar-plugin",
    "crates/kaze-util",
    "sidecar",
]
