[workspace]
resolver = "2"
members = [
    "crates/documented_toml",
    "crates/documented_toml_derive",
    "crates/kaze-core",
    "crates/kaze-edge",
    "crates/kaze-host",
    "crates/kaze-plugin",
    "crates/kaze-protocol",
    "crates/kaze-resolver",
    "crates/kaze-resolver-consul",
    "crates/kaze-service",
    "crates/kaze-sidecar",
    "crates/kaze-util",
    "sidecar",
]

[workspace.dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
bugreport = "0.5.1"
bytes = "1.10.1"
clap = { version = "4.5.37", features = ["derive"] }
dirs = "6.0.0"
duration-string = { version = "0.5.2", features = ["serde"] }
futures = "0.3.31"
leaky-bucket = "1.1.2"
local-ip-address = "0.6.5"
lockfree-object-pool = "0.1.6"
lru = "0.14.0"
metrics = "0.24.2"
metrics-exporter-prometheus = "0.17.0"
moka = { version = "0.12.10", features = ["future"] }
gethostname = "1.0.2"
page_size = "0.6.0"
papaya = "0.2.1"
parking_lot = { version = "0.12.3", features = ["arc_lock"] }
pin-project = "1.1.10"
prost = "0.13.5"
rand = "0.9.1"
rs-consul = "0.11.0"
scopeguard = "1.2.0"
serde = { version = "1.0.219", features = ["derive"] }
thingbuf = "0.1.6"
tokio = { version = "1.44.2", features = ["parking_lot"] }
tokio-graceful = "0.2.2"
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.15", features = ["codec"] }
toml = "0.8.22"
toml_edit = "0.22.26"
tower = { version = "0.5.2", features = ["util"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
#
documented-toml = { path = "crates/documented_toml" }
documented-toml-derive = { path = "crates/documented_toml_derive" }
kaze-core = { path = "crates/kaze-core" }
kaze-edge = { path = "crates/kaze-edge" }
kaze-host = { path = "crates/kaze-host" }
kaze-plugin = { path = "crates/kaze-plugin" }
kaze-protocol = { path = "crates/kaze-protocol" }
kaze-resolver = { path = "crates/kaze-resolver" }
kaze-resolver-consul = { path = "crates/kaze-resolver-consul" }
kaze-service = { path = "crates/kaze-service" }
kaze-sidecar = { path = "crates/kaze-sidecar" }
kaze-util = { path = "crates/kaze-util" }
