[package]
name = "meshproxy"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.22"
metrics = "0.24.1"
omango-futex = "0.1.2"
consul = "0.4.2"
bugreport = "0.5.0"
page_size = "0.6.0"
http = "1.2.0"
crossbeam-utils = "0.8.21"
atomic-wait = "1.1.0"

[dependencies.tokio]
version = "1.42.0"
features = ["full"]

[dependencies.clap]
version = "4.5.23"
features = ["cargo", "derive"]

[dependencies.async-scoped]
version = "0.9.0"
features = ["use-tokio"]

[target.'cfg(not(target_os = "windows"))'.dependencies]
libc = "0.2.126"
