[package]
name = "kaze_sidecar"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
metrics = "0.24.1"
consul = "0.4.2"
bugreport = "0.5.0"
http = "1.2.0"
page_size = "0.6.0"
prost = "0.13.4"
bytes = "1.9.0"
toml = "0.8.19"
serde = "1.0.216"
http-serde = "2.1.1"
clap-serde-derive = "0.2.1"
futures = "0.3.31"
rand = "0.8.5"
moka = { version = "0.12.8", features = ["future"] }
anyhow = "1.0.95"
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-appender = "0.2.3"
leaky-bucket = { version = "1.1.2", features = ["tracing"] }
tracing-core = "0.1.33"

[dependencies.kaze_core]
path = "../core"

[dependencies.tokio]
version = "1.42.0"
features = ["full"]

[dependencies.tokio-util]
version = "0.7.13"
features = ["full"]

[dependencies.tokio-stream]
version = "0.1.17"
features = ["full"]

[dependencies.clap]
version = "4.5.23"
features = ["cargo", "derive"]

[dependencies.metrics-exporter-prometheus]
version = "0.16.0"
features = ["http-listener", "push-gateway", "tokio", "tracing"]

[build-dependencies]
prost-build = "0.13.4"
