[package]
name = "kaze_sidecar"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = { version = "1.0.95", features = ["backtrace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-appender = "0.2.3"
bugreport = "0.5.0"
metrics = "0.24.1"
serde = "1.0.216"
futures = "0.3.31"
consul = "0.4.2"
toml = "0.8.19"
moka = { version = "0.12.8", features = ["future"] }
leaky-bucket = { version = "1.1.2", features = ["tracing"] }
prost = "0.13.4"
duration-string = { version = "0.4.0", features = ["serde"] }
bytes = "1.9.0"
page_size = "0.6.0"
rand = "0.8.5"

[dependencies.kaze_core]
path = "../core"

[dependencies.clap_merge]
path = "../clap_merge"

[dependencies.tokio]
version = "1.42.0"
features = ["full"]

[dependencies.tokio-util]
version = "0.7.13"
features = ["full"]

[dependencies.tokio-stream]
version = "0.1.17"
features = ["full"]

[dependencies.clap]
version = "4.5.23"
features = ["cargo", "derive", "string"]

[dependencies.metrics-exporter-prometheus]
version = "0.16.0"
features = ["http-listener", "push-gateway", "tokio", "tracing"]

[build-dependencies]
prost-build = "0.13.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
