[package]
name = "kaze"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
clap.workspace = true
toml_edit.workspace = true
duration-string.workspace = true
kaze-sidecar.workspace = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
