[package]
name = "documented-toml-derive"
version = "0.1.0"
edition = "2021"
description = "Derive macro implementation for DocumentedToml trait"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
