[package]
name = "kaze-corral"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.26", features = ["derive"] }
leaky-bucket = { version = "1.1.2", features = ["tracing"] }
futures = "0.3.31"
tokio = "1.43.0"
serde = { version = "1.0.217", features = ["derive"] }
metrics = "0.24.1"
tracing = "0.1.41"
tokio-util = { version = "0.7.13", features = ["time"] }
rand = "0.8.5"
tokio-stream = "0.1.17"
pin-project-lite = "0.2.16"
lru = "0.12.5"

[dependencies.clap-merge]
path = "../clap-merge"

[dependencies.kaze-edge]
path = "../kaze-edge"

[dependencies.kaze-protocol]
path = "../kaze-protocol"

[dependencies.kaze-util]
path = "../kaze-util"

[dependencies.kaze-resolver]
path = "../kaze-resolver"
