[package]
name = "kaze-corral"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.26", features = ["derive"] }
tokio = { version = "1.43.0", features = ["net"] }
serde = { version = "1.0.217", features = ["derive"] }
metrics = "0.24.1"
tracing = "0.1.41"
tokio-util = { version = "0.7.13", features = ["time"] }
tokio-stream = "0.1.17"
lru = "0.12.5"
tower = "0.5.2"

[dependencies.clap-merge]
path = "../clap-merge"

[dependencies.kaze-util]
path = "../kaze-util"

[dependencies.kaze-protocol]
path = "../kaze-protocol"

[dev-dependencies.tokio]
version = "1.43.0"
features = ["macros", "io-util"]
