[package]
name = "kaze-edge"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
metrics.workspace = true
page_size.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
tower.workspace = true
tracing.workspace = true
#
kaze-core.workspace = true
kaze-plugin.workspace = true
kaze-protocol.workspace = true
documented-toml.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["time", "macros", "rt-multi-thread"] }
