[package]
name = "kaze-plugin"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
tower = "0.5.2"
clap = { version = "4.5.35", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
kaze-protocol = { path = "../kaze-protocol" }
kaze-util = { path = "../kaze-util" }
