[package]
name = "kaze-plugin"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.35", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = "1.44.2"
tower = "0.5.2"
kaze-protocol = { path = "../kaze-protocol" }
kaze-util = { path = "../kaze-util" }
