[package]
name = "kaze-plugin"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
clap.workspace = true
papaya.workspace = true
parking_lot.workspace = true
serde.workspace = true
tokio-graceful.workspace = true
tokio-shutdown.workspace = true
tokio.workspace = true
tower.workspace = true
#
kaze-protocol.workspace = true
kaze-service.workspace = true
kaze-util.workspace = true
