[package]
name = "kaze-protocol"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow.workspace = true
lockfree-object-pool.workspace = true
prost.workspace = true
tokio-util.workspace = true
tracing.workspace = true
futures.workspace = true
tower.workspace = true
#
kaze-service.workspace = true
kaze-util.workspace = true

[build-dependencies]
prost-build = "0.13.5"

[dev-dependencies]
tokio = { version = "1.44.2", features = ["rt-multi-thread", "time", "macros"] }
