[package]
name = "kaze-resolver"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = "4.5.31"
serde = "1.0.218"
tokio = "1.44.0"
moka = { version = "0.12.10", features = ["future"] }
tracing = "0.1.41"
tower = { version = "0.5.2", features = ["util"] }
anyhow = "1.0.97"
papaya = "0.2.0"
rand = "0.9.0"

[dependencies.kaze-plugin]
path = "../kaze-plugin"
