[package]
name = "kaze-resolver"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
clap = "4.5.35"
moka = { version = "0.12.10", features = ["future"] }
papaya = "0.2.1"
rand = "0.9.0"
serde = "1.0.219"
tokio = "1.44.2"
tower = { version = "0.5.2", features = ["util"] }
tracing = "0.1.41"

[dependencies.kaze-plugin]
path = "../kaze-plugin"
