[package]
name = "kaze-resolver"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
clap.workspace = true
moka.workspace = true
papaya.workspace = true
rand.workspace = true
serde.workspace = true
tokio.workspace = true
tower = { workspace = true, features = ["util"] }
tracing.workspace = true
documented-toml.workspace = true

[dependencies.kaze-plugin]
path = "../kaze-plugin"
