[package]
name = "kaze-sidecar"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.97", features = ["backtrace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-appender = "0.2.3"
bugreport = "0.5.1"
metrics = "0.24.1"
toml = "0.8.20"
tower = "0.5.2"
leaky-bucket = "1.1.2"
futures = "0.3.31"
tokio-util = "0.7.13"
thingbuf = "0.1.6"
papaya = "0.2.0"
lru = "0.13.0"
tokio-stream = "0.1.17"
scopeguard = "1.2.0"
dirs = "6.0.0"

[dependencies.kaze-plugin]
path = "../kaze-plugin"

[dependencies.kaze-edge]
path = "../kaze-edge"

[dependencies.kaze-resolver]
path = "../kaze-resolver"

[dependencies.tokio]
version = "1.44.0"
features = ["full"]

[dependencies.clap]
version = "4.5.31"
features = ["cargo", "derive", "string"]

[dependencies.metrics-exporter-prometheus]
version = "0.16.2"
features = ["http-listener", "push-gateway", "tokio", "tracing"]

[dev-dependencies]
scopeguard = "1.2.0"
