[package]
name = "kaze-sidecar"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
bugreport.workspace = true
clap = { workspace = true, features = ["cargo", "derive", "string"] }
dirs.workspace = true
futures.workspace = true
leaky-bucket.workspace = true
lru.workspace = true
metrics-exporter-prometheus = { workspace = true, features = [
    "http-listener",
    "push-gateway",
    "tokio",
    "tracing",
] }
metrics.workspace = true
papaya.workspace = true
scopeguard.workspace = true
thingbuf.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tokio.workspace = true
toml.workspace = true
tower.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
#
kaze-plugin.workspace = true
kaze-edge.workspace = true
kaze-resolver.workspace = true

[dev-dependencies]
scopeguard = "1.2.0"
