[package]
name = "kaze-util"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
duration-string.workspace = true
futures.workspace = true
parking_lot.workspace = true
pin-project.workspace = true
tokio = { workspace = true, features = ["sync", "macros", "rt"] }
tokio-util = { workspace = true, features = ["time"] }
tower.workspace = true

[dev-dependencies]
futures-test = "0.3.31"
kaze-protocol = { path = "../kaze-protocol" }
tokio = { version = "1.44.2", features = [
    "macros",
    "time",
    "io-util",
    "rt-multi-thread",
] }
