[package]
name = "kaze-resolver"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.5.26"
serde = "1.0.217"
tokio = "1.43.0"
moka = { version = "0.12.8", features = ["future"] }
tracing = "0.1.41"
anyhow = "1.0.95"

[dependencies.clap-merge]
path = "../clap_merge"

[dependencies.kaze-utils]
path = "../utils"
